# remobs-inventario

./: .config  .config.example  .gitignore  AGENTS.md  CHANGELOG.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_inventory_schema.py  0002_add_field_checklists.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  permissions.py  security.py
backend/app/models/: __init__.py  alert.py  audit_log.py  checklist.py  file.py  inventory.py  platform.py  sensor.py  sync.py
backend/app/routers/: alerts.py  audit_logs.py  checklists.py  dashboard.py  inventory.py  movements.py  platforms.py  sensors.py  sync.py
backend/app/schemas/: __init__.py  alert.py  audit.py  checklist.py  dashboard.py  inventory.py  platform.py  sensor.py  sync.py
backend/app/services/: __init__.py  audit_service.py  inventory_service.py
backend/scripts/: __init__.py  build_spreadsheet_import_payload.py  check_production_readonly.py  deploy_amplify_manual.py  import_spreadsheet_payload.py  inspect_database_from_task_definition.py  provision_database_from_access_file.py  provision_database_from_ecs.py  provision_inventory_database.py  register_inventory_permissions.py  register_inventory_task_definition.py  run_migration_from_task_definition.py  smoke_production.py  validate_database_from_task_definition.py
backend/tests/: test_auth_inventory_contract.py
docs/: Ficha_Campo_MEq_AX39_DD_MM_AA.xlsx  INVENTARIO.xlsx
(+106 files in other folders)
